# FastAPI_testing_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: hooks.py
app/api/v1/: __init__.py  checks.py  devices.py
app/core/: config.py
app/managers/: connection_manager.py  redis_manager.py
app/models/: dev_types.py
app/tests/: conftest.py
app/tests/api/: test_devices.py
