[tool.poetry]
name = "testing_project"
version = "0.1.0"
description = ""
authors = ["lilimik <kazakovlim@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
aioredis = "^1.3.1"
asyncpg = "^0.23.0"
uvicorn = "^0.14.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"
aredis = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
